// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should send mail to the thread followers 1`] = `
Array [
  Object {
    "asm": Object {
      "groupId": 12850,
    },
    "category": "Notification",
    "from": Object {
      "email": "informer@daily.dev",
      "name": "daily.dev",
    },
    "personalizations": Array [
      Object {
        "dynamicTemplateData": Object {
          "discussion_link": "http://localhost:5002/posts/p1",
          "full_name_commenter": "Ido",
          "full_name_replier": "John",
          "main_comment": "parent comment",
          "main_comment_link": "http://localhost:5002/posts/p1",
          "new_comment": "sub comment4",
          "post_title": "P1",
          "profile_image_commenter": "https://daily.dev/ido.jpg",
          "profile_image_replier": "https://daily.dev/john.jpg",
          "user_reputation_commenter": 5,
          "user_reputation_replier": 0,
        },
        "to": "tsahi@acme.com",
      },
      Object {
        "dynamicTemplateData": Object {
          "discussion_link": "http://localhost:5002/posts/p1",
          "full_name_commenter": "Ido",
          "full_name_replier": "John",
          "main_comment": "parent comment",
          "main_comment_link": "http://localhost:5002/posts/p1",
          "new_comment": "sub comment4",
          "post_title": "P1",
          "profile_image_commenter": "https://daily.dev/ido.jpg",
          "profile_image_replier": "https://daily.dev/john.jpg",
          "user_reputation_commenter": 5,
          "user_reputation_replier": 0,
        },
        "to": "nimrod@acme.com",
      },
    ],
    "replyTo": Object {
      "email": "hi@daily.dev",
      "name": "daily.dev",
    },
    "templateId": "d-62cb8a27d08a4951a49aade3b292c1ed",
    "trackingSettings": Object {
      "openTracking": Object {
        "enable": true,
      },
    },
  },
]
`;

exports[`should send mail to the thread followers without the post author 1`] = `
Array [
  Object {
    "asm": Object {
      "groupId": 12850,
    },
    "category": "Notification",
    "from": Object {
      "email": "informer@daily.dev",
      "name": "daily.dev",
    },
    "personalizations": Array [
      Object {
        "dynamicTemplateData": Object {
          "discussion_link": "http://localhost:5002/posts/p1",
          "full_name_commenter": "Ido",
          "full_name_replier": "John",
          "main_comment": "parent comment",
          "main_comment_link": "http://localhost:5002/posts/p1",
          "new_comment": "sub comment4",
          "post_title": "P1",
          "profile_image_commenter": "https://daily.dev/ido.jpg",
          "profile_image_replier": "https://daily.dev/john.jpg",
          "user_reputation_commenter": 5,
          "user_reputation_replier": 0,
        },
        "to": "nimrod@acme.com",
      },
    ],
    "replyTo": Object {
      "email": "hi@daily.dev",
      "name": "daily.dev",
    },
    "templateId": "d-62cb8a27d08a4951a49aade3b292c1ed",
    "trackingSettings": Object {
      "openTracking": Object {
        "enable": true,
      },
    },
  },
]
`;
